[tool.poetry]
name = "streamlit-web-dev"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "streamlit_web_dev"}]

[tool.poetry.dependencies]
python = "3.9.15"
streamlit = "^1.15.1"
pandas = "^1.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
